# Otus-Intensive

./: CMakeLists.txt  ip_filter.cpp  lib.cpp  lib.h  main.cpp  makefile  version.h.in
.github/workflows/: cmake.yml  release.yml
